<resources>
    <string name="app_name">EDC</string>
    <string name="Treatments">Zabiegi</string>
    <string name="doctors">Lekarze</string>
    <string name="bad_drugs">Używki</string>
    <string name="pains">Bóle</string>
    <string name="visits">Wizyty</string>
    <string name="drugs">Leki</string>
    <string name="history">Historia</string>
    <string name="taking_drugs">Brane</string>
    <string name="create_report">Twórz raport</string>
    <string name="note_list">Lista notatek</string>
    <string name="user_name_hint">Wpisz swojej imię</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="allergens">Alergeny</string>
    <string name="ICE_card">Karta I.C.E.</string>
    <string name="about_result_s">Pomiar w mg/dL</string>
    <string name="data">Data</string>
    <string name="about">Opis:</string>
</resources>