<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrugsActivity">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtMenu_Drugs"
            android:text="@string/drugs"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/menu_Drugs"
            >


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/btn_Drugs_history"
                android:text="@string/history"
                android:layout_marginTop="50dp"
                />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/btnTaking_drugs"
                android:text="@string/taking_drugs"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/btn_Drugs_history"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/btnEditDrugList"
                android:text="@string/doctors"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/btnTaking_drugs"
                />





        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>